# geany

./: CMakeLists.txt  Makefile.in  aclocal.m4  config.h.in~  gen-signal.sh
.pc/20_use_x_terminal_emulator.patch/src/: keyfile.c
autom4te.cache/: output.0  requests  traces.0  traces.1
ctags/: CMakeLists.txt  Makefile.in
ctags/parsers/: markdown.c
data/: Makefile.in
doc/: Makefile.in
icons/: Makefile.in
icons/16x16/: Makefile.in
icons/24x24/: Makefile.in
icons/32x32/: Makefile.in
icons/48x48/: Makefile.in
icons/scalable/: Makefile.in
icons/tango/: Makefile.in
icons/tango/16x16/: Makefile.in
icons/tango/24x24/: Makefile.in
icons/tango/32x32/: Makefile.in
icons/tango/48x48/: Makefile.in
icons/tango/scalable/: Makefile.in
plugins/: Makefile.in
po/: zh_CN.po
scintilla/: CMakeLists.txt  Makefile.in
scintilla/include/: Makefile.in
scintilla/src/: EditView.cxx  Editor.cxx  ViewStyle.cxx
src/: .editor.c.un~  Makefile.in  about.c  editor.c  editor.c~  editor.h  sidebar.c  symbols.c
src/tagmanager/: CMakeLists.txt  Makefile.in
tests/: Makefile.in
tests/ctags/: Makefile.in
